--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-﻿.vs
-.vs/
+DatingApp.API/.vs/DatingApp.API/v16/Server/sqlite3/db.lock
+DatingApp.API/DatingApp.API/appsettings.json
+
+.vs
 .vs\
-.vscode
-bin
-obj
-*.db
-v16
+
+.suo
 DatingApp.API/.vs/DatingApp.API/v16/.suo
 DatingApp.API/.vs/DatingApp.API/v16/Server/sqlite3/storage.ide
 DatingApp.API/.vs/
 DatingApp.API/.vs
+
