Added : Registration component

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ DatingApp.API/.vs/DatingApp.API/v16/Server/sqlite3/storage.ide
 DatingApp.API/.vs/
 DatingApp.API/.vs
 
+DatingApp.API/.vs/DatingApp.API/v16/.suo
