--- a/DatingApp.API/DatingApp.API/appsettings.json
+++ b/DatingApp.API/DatingApp.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "Token": "super secret key"
+    "Token": "TESSSSSSSSSSSSSSSSST"
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=datingapp.db"
