--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
-    "@auth0/angular-jwt": "^4.0.0",
+    "@auth0/angular-jwt": "^3.0.1",
+    "@kolkov/ngx-gallery": "^1.0.11",
     "alertifyjs": "^1.13.1",
     "bootstrap": "^4.4.1",
     "bootswatch": "^4.4.1",
