--- a/DatingApp.API/DatingApp.API/DatingApp.API.csproj
+++ b/DatingApp.API/DatingApp.API/DatingApp.API.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <Compile Remove="Migrations\20200319071240_ExtendedUserClassAndAddedPhotos.cs" />
     <Compile Remove="Migrations\20200319071240_ExtendedUserClassAndAddedPhotos.Designer.cs" />
+    <Compile Remove="Migrations\20200328151353_AddedLikeEntity.cs" />
+    <Compile Remove="Migrations\20200328151353_AddedLikeEntity.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
