--- a/DatingApp.API/DatingApp.API/appsettings.json
+++ b/DatingApp.API/DatingApp.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "testham",
+    "ApiKey": "989148831823192",
+    "ApiSecret": "Csdeljd7qV4HPfacFjBHjpvpbaQ"
+  }
 }
